[tool.poetry]
name = "netmonitor"
version = "0.1.0"
description = ""
authors = [" mohammadno09199-bit <mohammadno09199@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^7.2.2"
rich = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
